[gd_scene load_steps=3 format=3 uid="uid://dp8eidel8cvuk"]

[ext_resource type="Script" path="res://Scenes/UI/Menus/pauseMenu/PauseMenu.gd" id="1_fgger"]
[ext_resource type="PackedScene" uid="uid://1gecqrllrsps" path="res://Scenes/UI/Menus/helpMenu/help.tscn" id="2_8bwup"]

[node name="PauseMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_fgger")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "  ?  "

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 0

[node name="ColorRect" type="ColorRect" parent="MarginContainer2"]
layout_mode = 2
color = Color(0, 0, 0, 0.862745)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 148

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 59
text = "Pause Menu"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="BackGame" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Back to Game"

[node name="Help" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Help"

[node name="BackTitle" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Back to Title Screen"

[node name="Restart" type="Button" parent="MarginContainer2/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 23
text = "Restart"

[node name="Help" parent="." instance=ExtResource("2_8bwup")]
visible = false
layout_mode = 2

[connection signal="pressed" from="MarginContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer/BackGame" to="." method="_on_back_game_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer/BackTitle" to="." method="_on_back_title_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
